allow Vantage6 version specification through appsettings

--- a/src/v6-py-client-in-dotnet/appsettings.Development.json
+++ b/src/v6-py-client-in-dotnet/appsettings.Development.json
@@ -5,12 +5,13 @@
     "Username": "dev_admin",
     "Password": "password",
     "ApiPath": "/api",
-    "PythonHome": "path/to/python",
+    "PythonHome": "path/to/python_executable_directory",
     "OrganizationKey": "",
     "DefaultCollaborationId": 1,
     "DefaultOrganizationIds": [
       1
-    ]
+    ],
+    "Vantage6Version": ""
   },
   "Logging": {
     "LogLevel": {
