--- a/src/v6-py-client-in-dotnet/appsettings.Development.json
+++ b/src/v6-py-client-in-dotnet/appsettings.Development.json
@@ -4,6 +4,7 @@
     "Port": 7601,
     "Username": "dev_admin",
     "Password": "password",
+    "MfaKey": "",
     "ApiPath": "/api",
     "PythonHome": "path/to/python_executable_directory",
     "OrganizationKey": "",
