--- a/src/v6-py-client-in-dotnet/v6-py-client-in-dotnet.csproj
+++ b/src/v6-py-client-in-dotnet/v6-py-client-in-dotnet.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+    <PackageReference Include="Otp.NET" Version="1.4.0" />
     <PackageReference Include="pythonnet" Version="3.0.5" />
   </ItemGroup>
 
